--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Oluwakemi Temitope <shininglite@gmail.com>
-Besthor Igbe <igbebestor7@gmail.com>
+
+great Joseph <jgreat770@gmail.com>
