--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,1 @@
-# This file lists all individuals having contributed content to the repository.
-
-
-great Joseph <jgreat770@gmail.com>
+great joseph <jgreat770@gmail.com>
